samples/cilium/database-store-service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: database-store-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database-store-service
  name: database-store-service
  namespace: database-store-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: database-store-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>,<Egress/30000/TCP/HTTP>"
      labels:
        app: database-store-service
        name: database-store-service
        version: v1
    spec:
      containers:
      - image: fidelissauro/database-store-service:latest
        name: database-store-service
        ports:
        - containerPort: 8080
          name: http
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: database-store-service
  namespace: database-store-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"    
  labels:
    app.kubernetes.io/name: database-store-service
    app.kubernetes.io/instance: database-store-service 
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    app: database-store-service
  type: ClusterIP
