samples/cilium/proteins.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proteins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proteins-grpc
  name: proteins-grpc
  namespace: proteins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proteins-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000"
        policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>,<Egress/30000/TCP/HTTP>"
      labels:
        app: proteins-grpc
        name: proteins-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/proteins-grpc-service:latest
        name: proteins-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: proteins-grpc
  namespace: proteins
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: proteins-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: proteins-grpc
  type: ClusterIP
