samples/cilium/water.yml
apiVersion: v1
kind: Namespace
metadata:
  name: water
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: water-grpc
  name: water-grpc
  namespace: water
spec:
  replicas: 2
  selector:
    matchLabels:
      app: water-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000" 
        policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>,<Egress/30000/TCP/HTTP>"
      labels:
        app: water-grpc
        name: water-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/water-grpc-service:latest
        name: water-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: water-grpc
  namespace: water
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: water-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: water-grpc
  type: ClusterIP
